k8s/example-voting-app/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  namespace: vote
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
