k8s/example-voting-app/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: vote
spec:
  type: NodePort
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
    nodePort: 31001
  selector:
    app: result
